deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zad2-deployment
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 2
  selector:
    matchLabels:
      app: zad2-deployment
  template:
    metadata:
      labels:
        app: zad2-deployment
    spec:
      containers:
      - name: zad2-container
        image: kkmp13/zad2:1.0.8
        ports:
        - containerPort: 80
