service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zad2-service
spec:
  type: NodePort
  selector:
    app: zad2-deployment
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
